[tool.poetry]
name = "my_playbook_repo"
version = "0.0.1"
description = ""
authors = ["wahaj <wahaj.ali@xgrid.co>"]

[tool.poetry.dependencies]
google-auth = "^2.11.0"
google-api-python-client = "^2.61.0"
google-cloud-container = "^2.11.2"
pulumi = "^3.40.0"
pulumi-gcp = "^6.37.0"
gcloud-config-helper = "^0.3.1"
# if your playbook requires additional dependencies, add them here
#some-dependency = "^1.2.3"

[tool.poetry.dev-dependencies]
robusta-cli = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
